# this_is_fine

./: .gitignore  CLAUDE.md  README.md  debug_firms_columns.py  main.py  pyproject.toml  test_firms_api.py  test_global_fires.py  test_noaa_integration.py
data/: wildfire.duckdb
data/processed/: active_fires.geojson  fire_buffers.geojson  region_metadata.json
data/static/: persistent_anomalies.csv  persistent_anomalies.geojson
docs/: bounding_boxes.md  data_directory_structure.md  etl_flow_explanation.md  firms_overview.md  gis_spatial_operations.md  gradio_web_interface.md  industrial_filtering.md  kepler_visualization_guide.md  mcp_tool_logging.md  noaa_integration.md  noaa_integration_summary.md  quick_start_web_interface.md
flows/: etl_flow.py
mcp_server/: server.py  tools.py
notebooks/: kepler.ipynb  plotly_visualization.ipynb  test_kepler_minimal.py  test_kepler_view.py
scripts/: analyze_industrial_sources.py  clean_jupyter_kernels.py  clear_database.py
src/: cli.py
src/analysis/: risk_calculator.py
src/commands/: __init__.py  database.py  fetch_fires.py  industrial.py  regions.py
src/database/: __init__.py  connection.py  operations.py  queries.py  schema.py
src/filters/: industrial_filter.py
src/ingestion/: airnow_client.py  firms_client.py  noaa_client.py  purpleair_client.py
web/: gradio_app.py
